--- a/publish.html
+++ b/publish.html
@@ -1,4 +1,3 @@
-<!-- publish.html (cleaned, full version with auto-check system) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Publish to Void</title>
   <style>
-    /* (Same styling as before) */
     body { background-color: #0f0f0f; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
     header { text-align: center; padding: 1rem; border-bottom: 1px solid #333; background-color: #1a1a1a; font-weight: bold; font-size: 1.2rem; }
     .container { padding: 1rem; padding-bottom: 6rem; max-width: 600px; margin: auto; text-align: center; }
@@ -18,17 +16,49 @@
     .preview { margin-top: 2rem; background-color: #1c1c1c; border: 1px solid #333; padding: 1rem; border-radius: 6px; color: #aaa; }
     .bottom-nav { position: fixed; bottom: 0; width: 100%; background-color: #1a1a1a; border-top: 1px solid #333; display: flex; justify-content: space-around; padding: 0.5rem 0; }
     .bottom-nav a { color: #888; text-decoration: none; font-size: 1.3rem; }
+    .live-counter {
+      position: fixed;
+      font-size: 0.9rem;
+      color: #666;
+      background-color: #1a1a1a;
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      z-index: 999;
+      right: 10px;
+    }
+    #scroll-counter { bottom: 50px; }
+    #like-counter { bottom: 80px; }
+    #comment-counter { bottom: 110px; }
+    #repost-counter { bottom: 140px; }
+    #bookmark-counter { bottom: 170px; }
+    #reel-counter { bottom: 200px; }
+    #story-counter { bottom: 230px; }
+    #profile-counter { bottom: 260px; }
+    #post-counter { bottom: 290px; }
+    #time-counter { bottom: 320px; }
   </style>
 </head>
 <body>
-  <header>Publish an Achievement</header>
+  <header>Publish a Stat</header>
 
   <div class="container">
-    <p>Select one of your unlocked achievements below:</p>
-    <div class="achievements-grid" id="achievementGrid"></div>
+    <p>Select a stat to share with the void:</p>
+    <div class="achievements-grid" id="statGrid"></div>
     <button onclick="publish()">Post to the Void</button>
     <div class="preview" id="preview" style="display:none;"></div>
   </div>
+
+  <div id="scroll-counter" class="live-counter"></div>
+  <div id="like-counter" class="live-counter"></div>
+  <div id="comment-counter" class="live-counter"></div>
+  <div id="repost-counter" class="live-counter"></div>
+  <div id="bookmark-counter" class="live-counter"></div>
+  <div id="reel-counter" class="live-counter"></div>
+  <div id="story-counter" class="live-counter"></div>
+  <div id="profile-counter" class="live-counter"></div>
+  <div id="post-counter" class="live-counter"></div>
+  <div id="time-counter" class="live-counter"></div>
 
   <div class="bottom-nav">
     <a href="index.html">🏠</a>
@@ -39,67 +69,66 @@
   </div>
 
   <script>
-    const achievementsList = {
-      doomscroll: { name: "Doomscrolled", desc: "Wasted over 1 minute." },
-      liker: { name: "You Liked That", desc: "Gave 10 meaningless likes." },
-      voidpro: { name: "Void Professional", desc: "Spent 5 minutes in the void." },
-      scroller: { name: "Scroller Supreme", desc: "Scrolled 100 times." }
-    };
+    const statKeys = [
+      { key: "reelsViewed", label: "Reels viewed" },
+      { key: "storiesViewed", label: "Stories viewed" },
+      { key: "commentsGiven", label: "Comments given" },
+      { key: "repostsDone", label: "Reposts done" },
+      { key: "postsBookmarked", label: "Bookmarks" },
+      { key: "scrollCount", label: "Scrolls done" },
+      { key: "profilesVisited", label: "Profiles visited" },
+      { key: "postsPosted", label: "Posts posted" },
+      { key: "likesGiven", label: "Likes given" },
+      { key: "secondsWasted", label: "Minutes wasted", transform: val => Math.floor(val / 60) }
+    ];
 
-    function checkAchievements() {
-      const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
-      const likes = parseInt(localStorage.getItem("likesGiven")) || 0;
-      const time = parseInt(localStorage.getItem("secondsWasted")) || 0;
-      const scrolls = parseInt(localStorage.getItem("scrollCount")) || 0;
-
-      const award = key => {
-        if (!unlocked.includes(key)) unlocked.push(key);
-      };
-
-      if (time >= 60) award("doomscroll");
-      if (likes >= 10) award("liker");
-      if (time >= 300) award("voidpro");
-      if (scrolls >= 100) award("scroller");
-
-      localStorage.setItem("achievements", JSON.stringify(unlocked));
-    }
-
-    checkAchievements();
-
-    const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
-    const grid = document.getElementById("achievementGrid");
+    const statGrid = document.getElementById("statGrid");
     const preview = document.getElementById("preview");
     let selectedKey = null;
 
-    Object.keys(achievementsList).forEach(key => {
-      if (!unlocked.includes(key)) return;
-      const ach = achievementsList[key];
+    function getStatValue(key, transform = val => val) {
+      return transform(parseInt(localStorage.getItem(key)) || 0);
+    }
+
+    statKeys.forEach(({ key, label, transform }) => {
+      const val = getStatValue(key, transform);
       const tile = document.createElement("div");
       tile.className = "achievement-tile";
-      tile.innerHTML = `<strong>${ach.name}</strong><br>${ach.desc}`;
+      tile.textContent = `${label}: ${val}`;
       tile.onclick = () => {
         document.querySelectorAll(".achievement-tile").forEach(el => el.classList.remove("selected"));
         tile.classList.add("selected");
-        selectedKey = key;
+        selectedKey = { label, val };
       };
-      grid.appendChild(tile);
+      statGrid.appendChild(tile);
     });
 
     function publish() {
       if (!selectedKey) {
         preview.style.display = "block";
-        preview.textContent = "Please select an achievement.";
+        preview.textContent = "Please select a stat.";
         return;
       }
-
-      const ach = achievementsList[selectedKey];
-      const postText = `${ach.name} – ${ach.desc}`;
-      const posts = JSON.parse(localStorage.getItem("sharedPosts")) || [];
-      posts.unshift(postText);
-      localStorage.setItem("sharedPosts", JSON.stringify(posts));
+      const postText = `Shared: ${selectedKey.label} = ${selectedKey.val}`;
       preview.style.display = "block";
-      preview.textContent = postText;
+      preview.textContent = postText + "\n(post lost in the void)";
     }
+
+    function updateLiveStats() {
+      const get = key => parseInt(localStorage.getItem(key)) || 0;
+      document.getElementById("scroll-counter").textContent = `Scrolls done: ${get("scrollCount")}`;
+      document.getElementById("like-counter").textContent = `Likes given: ${get("likesGiven")}`;
+      document.getElementById("comment-counter").textContent = `Comments given: ${get("commentsGiven")}`;
+      document.getElementById("repost-counter").textContent = `Reposts done: ${get("repostsDone")}`;
+      document.getElementById("bookmark-counter").textContent = `Bookmarks: ${get("postsBookmarked")}`;
+      document.getElementById("reel-counter").textContent = `Reels viewed: ${get("reelsViewed")}`;
+      document.getElementById("story-counter").textContent = `Stories viewed: ${get("storiesViewed")}`;
+      document.getElementById("profile-counter").textContent = `Profiles visited: ${get("profilesVisited")}`;
+      document.getElementById("post-counter").textContent = `Posts posted: ${get("postsPosted")}`;
+      document.getElementById("time-counter").textContent = `Minutes wasted: ${Math.floor(get("secondsWasted") / 60)}`;
+    }
+
+    updateLiveStats();
   </script>
 </body>
 </html>
