--- a/index.html
+++ b/index.html
@@ -1,203 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>InstaVoid</title>
-<style>
-body {
-  background-color: #0f0f0f;
-  color: #fff;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: #1a1a1a;
-  border-bottom: 1px solid #333;
-}
-.logo {
-  font-size: 1.4rem;
-  font-weight: bold;
-  letter-spacing: 1px;
-  color: #fff;
-}
-.nav-icons {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  position: relative;
-}
-.nav-icons img {
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  filter: invert(60%);
-}
-#notificationDropdown {
-  position: absolute;
-  top: 40px;
-  right: 0;
-  background-color: #1a1a1a;
-  border: 1px solid #333;
-  padding: 0.5rem;
-  border-radius: 6px;
-  width: 250px;
-  display: none;
-  z-index: 1000;
-  box-shadow: 0 0 10px #000;
-}
-#notificationDropdown p {
-  font-size: 0.9rem;
-  color: #ccc;
-  margin-bottom: 0.5rem;
-  border-bottom: 1px solid #333;
-  padding-bottom: 0.5rem;
-}
-.stories {
-  display: flex;
-  overflow-x: auto;
-  padding: 1rem;
-  border-bottom: 1px solid #333;
-}
-.story {
-  flex: 0 0 auto;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  margin-right: 10px;
-  border: 2px solid #f44;
-  background-size: cover;
-  background-position: center;
-  background-color: #444;
-}
-main {
-  padding: 1rem;
-  padding-bottom: 6rem;
-}
-.post {
-  background-color: #1c1c1c;
-  border: 1px solid #333;
-  margin: 2rem auto;
-  width: 100%;
-  max-width: 400px;
-  color: #fff;
-  position: relative;
-}
-.post-header {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-.post-header img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.post-header span {
-  font-weight: bold;
-  color: #ccc;
-}
-.post-image {
-  width: 100%;
-  height: 300px;
-  background-color: #333;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 1rem;
-  color: #aaa;
-}
-.post-actions {
-  display: flex;
-  justify-content: space-around;
-  padding: 10px;
-}
-.post-actions button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #ccc;
-  font-size: 1.1rem;
-}
-.comment-box {
-  padding: 0.5rem 1rem 1rem;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  display: none;
-}
-.comment-box input {
-  flex: 1;
-  padding: 0.5rem;
-  background-color: #111;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  font-size: 0.9rem;
-}
-.comment-box button {
-  padding: 0.5rem 0.8rem;
-  background-color: #222;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.live-counter {
-  position: fixed;
-  font-size: 0.9rem;
-  color: #666;
-  background-color: #1a1a1a;
-  padding: 6px 10px;
-  border-radius: 6px;
-  border: 1px solid #333;
-  z-index: 999;
-  right: 10px;
-}
-#waste-counter { bottom: 50px; }
-#like-counter { bottom: 80px; }
-#scroll-counter { bottom: 110px; }
-#comments-counter { bottom: 140px; }
-#reposts-counter { bottom: 170px; }
-#bookmarks-counter { bottom: 200px; }
-#reel-counter { bottom: 230px; }
-#story-counter { bottom: 260px; }
-#profile-counter { bottom: 290px; }
-#post-counter { bottom: 320px; }
-.bottom-nav {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: #1a1a1a;
-  border-top: 1px solid #333;
-  display: flex;
-  justify-content: space-around;
-  padding: 0.5rem 0;
-}
-.bottom-nav a {
-  color: #888;
-  text-decoration: none;
-  font-size: 1.3rem;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>InstaVoid</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 20px;
+    }
+    .layout-wrapper {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      max-width: 1600px;
+    }
+    #live-stats {
+      flex-shrink: 0;
+      width: 180px;
+      margin-right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 10px;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      position: sticky;
+      top: 20px;
+      height: fit-content;
+      font-size: 0.85rem;
+      line-height: 1.6;
+    }
+    #app-frame {
+      width: min(430px, 90vw);
+      background-color: #0f0f0f;
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+        flex-direction: column;
+      }
+      .layout-wrapper {
+        flex-direction: column;
+        align-items: center;
+      }
+      #live-stats {
+        width: 100%;
+        margin: 0 0 20px 0;
+        flex-direction: row;
+        justify-content: space-around;
+      }
+    }
+
+    /* Your Original Styles – All Preserved */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+      background-color: #1a1a1a;
+      border-bottom: 1px solid #333;
+    }
+    .logo {
+      font-size: 1.4rem;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #fff;
+    }
+    .nav-icons {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      position: relative;
+    }
+    .nav-icons img {
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      filter: invert(60%);
+    }
+    #notificationDropdown {
+      position: absolute;
+      top: 40px;
+      right: 0;
+      background-color: #1a1a1a;
+      border: 1px solid #333;
+      padding: 0.5rem;
+      border-radius: 6px;
+      width: 250px;
+      display: none;
+      z-index: 1000;
+      box-shadow: 0 0 10px #000;
+    }
+    #notificationDropdown p {
+      font-size: 0.9rem;
+      color: #ccc;
+      margin-bottom: 0.5rem;
+      border-bottom: 1px solid #333;
+      padding-bottom: 0.5rem;
+    }
+    .stories {
+      display: flex;
+      overflow-x: auto;
+      padding: 1rem;
+      border-bottom: 1px solid #333;
+    }
+    .story {
+      flex: 0 0 auto;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-right: 10px;
+      border: 2px solid #f44;
+      background-size: cover;
+      background-position: center;
+      background-color: #444;
+    }
+    main {
+      padding: 1rem;
+      padding-bottom: 6rem;
+    }
+    .post {
+      background-color: #1c1c1c;
+      border: 1px solid #333;
+      margin: 2rem auto;
+      width: 100%;
+      max-width: 400px;
+      color: #fff;
+      position: relative;
+    }
+    .post-header {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+    }
+    .post-header img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+    .post-header span {
+      font-weight: bold;
+      color: #ccc;
+    }
+    .post-image {
+      width: 100%;
+      height: 300px;
+      background-color: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 1rem;
+      color: #aaa;
+    }
+    .post-actions {
+      display: flex;
+      justify-content: space-around;
+      padding: 10px;
+    }
+    .post-actions button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #ccc;
+      font-size: 1.1rem;
+    }
+    .comment-box {
+      padding: 0.5rem 1rem 1rem;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      display: none;
+    }
+    .comment-box input {
+      flex: 1;
+      padding: 0.5rem;
+      background-color: #111;
+      border: 1px solid #444;
+      color: #ccc;
+      border-radius: 4px;
+      font-size: 0.9rem;
+    }
+    .comment-box button {
+      padding: 0.5rem 0.8rem;
+      background-color: #222;
+      border: 1px solid #444;
+      color: #ccc;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .live-counter {
+      position: fixed;
+      font-size: 0.9rem;
+      color: #666;
+      background-color: #1a1a1a;
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      z-index: 999;
+      right: 10px;
+    }
+    #waste-counter { bottom: 50px; }
+    #like-counter { bottom: 80px; }
+    #scroll-counter { bottom: 110px; }
+    #comments-counter { bottom: 140px; }
+    #reposts-counter { bottom: 170px; }
+    #bookmarks-counter { bottom: 200px; }
+    #reel-counter { bottom: 230px; }
+    #story-counter { bottom: 260px; }
+    #profile-counter { bottom: 290px; }
+    #post-counter { bottom: 320px; }
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+    }
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="layout-wrapper">
+    <!-- Live Stats Sidebar -->
+    <div id="live-stats">
+      <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+      <div>Likes Given: <span id="stat-likes">0</span></div>
+      <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+      <div>Comments Given: <span id="stat-comments">0</span></div>
+      <div>Reposts Done: <span id="stat-reposts">0</span></div>
+      <div>Bookmarked: <span id="stat-bookmarks">0</span></div>
+      <div>Reels Viewed: <span id="stat-reels">0</span></div>
+      <div>Stories Viewed: <span id="stat-stories">0</span></div>
+      <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+      <div>Posts Posted: <span id="stat-posts">0</span></div>
+    </div>
+
+    <!-- Main Mobile App Frame -->
+    <div id="app-frame">
+    <header>
   <div class="logo">InstaVoid</div>
   <div class="nav-icons">
     <img id="notifIcon" src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="notifications" />
     <div id="notificationDropdown"></div>
   </div>
 </header>
+
 <div class="stories" id="storiesBar"></div>
 <main id="feed"></main>
+
 <div id="waste-counter" class="live-counter"></div>
 <div id="like-counter" class="live-counter"></div>
 <div id="scroll-counter" class="live-counter"></div>
@@ -208,6 +285,7 @@ main {
 <div id="story-counter" class="live-counter"></div>
 <div id="profile-counter" class="live-counter"></div>
 <div id="post-counter" class="live-counter"></div>
+
 <div class="bottom-nav">
   <a href="index.html">🏠</a>
   <a href="search.html">🔍</a>
@@ -215,6 +293,7 @@ main {
   <a href="reels.html">🎞️</a>
   <a href="profile.html">👤</a>
 </div>
+
 <script>
 const feed = document.getElementById("feed");
 const storiesBar = document.getElementById("storiesBar");
@@ -251,6 +330,18 @@ function updateStats() {
   document.getElementById("story-counter").textContent = `Stories viewed: ${storiesViewed}`;
   document.getElementById("profile-counter").textContent = `Profiles visited: ${profilesVisited}`;
   document.getElementById("post-counter").textContent = `Posts posted: ${postsPosted}`;
+
+  // Update side stat counters
+  document.getElementById("stat-minutes").textContent = Math.floor(secondsWasted / 60);
+  document.getElementById("stat-likes").textContent = likesGiven;
+  document.getElementById("stat-scrolls").textContent = scrollCount;
+  document.getElementById("stat-comments").textContent = commentsGiven;
+  document.getElementById("stat-reposts").textContent = repostsDone;
+  document.getElementById("stat-bookmarks").textContent = postsBookmarked;
+  document.getElementById("stat-reels").textContent = reelsViewed;
+  document.getElementById("stat-stories").textContent = storiesViewed;
+  document.getElementById("stat-profiles").textContent = profilesVisited;
+  document.getElementById("stat-posts").textContent = postsPosted;
 }
 
 setInterval(() => {
@@ -383,5 +474,8 @@ window.addEventListener("scroll", () => {
 
 updateStats();
 </script>
+
+    </div>
+  </div>
 </body>
 </html>
