--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
       line-height: 1.6;
     }
     #app-frame {
-      width: min(430px, 90vw);
+      width: min(645px, 95vw); /* ⬅️ 1.5x wider */
       background-color: #0f0f0f;
       border-radius: 20px;
       box-shadow: 0 0 15px rgba(0,0,0,0.3);
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      position: relative;
     }
     @media (max-width: 768px) {
       body {
@@ -67,183 +68,184 @@
         flex-direction: row;
         justify-content: space-around;
       }
+      #app-frame {
+        width: 100%;
+      }
     }
 
-    /* Your Original Styles – All Preserved */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1rem;
-      background-color: #1a1a1a;
-      border-bottom: 1px solid #333;
-    }
-    .logo {
-      font-size: 1.4rem;
-      font-weight: bold;
-      letter-spacing: 1px;
-      color: #fff;
-    }
-    .nav-icons {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      position: relative;
-    }
-    .nav-icons img {
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-      filter: invert(60%);
-    }
-    #notificationDropdown {
-      position: absolute;
-      top: 40px;
-      right: 0;
-      background-color: #1a1a1a;
-      border: 1px solid #333;
-      padding: 0.5rem;
-      border-radius: 6px;
-      width: 250px;
-      display: none;
-      z-index: 1000;
-      box-shadow: 0 0 10px #000;
-    }
-    #notificationDropdown p {
-      font-size: 0.9rem;
-      color: #ccc;
-      margin-bottom: 0.5rem;
-      border-bottom: 1px solid #333;
-      padding-bottom: 0.5rem;
-    }
-    .stories {
-      display: flex;
-      overflow-x: auto;
-      padding: 1rem;
-      border-bottom: 1px solid #333;
-    }
-    .story {
-      flex: 0 0 auto;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      margin-right: 10px;
-      border: 2px solid #f44;
-      background-size: cover;
-      background-position: center;
-      background-color: #444;
-    }
-    main {
-      padding: 1rem;
-      padding-bottom: 6rem;
-    }
-    .post {
-      background-color: #1c1c1c;
-      border: 1px solid #333;
-      margin: 2rem auto;
-      width: 100%;
-      max-width: 400px;
-      color: #fff;
-      position: relative;
-    }
-    .post-header {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-    }
-    .post-header img {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
-    .post-header span {
-      font-weight: bold;
-      color: #ccc;
-    }
-    .post-image {
-      width: 100%;
-      height: 300px;
-      background-color: #333;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-size: 1rem;
-      color: #aaa;
-    }
-    .post-actions {
-      display: flex;
-      justify-content: space-around;
-      padding: 10px;
-    }
-    .post-actions button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: #ccc;
-      font-size: 1.1rem;
-    }
-    .comment-box {
-      padding: 0.5rem 1rem 1rem;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      display: none;
-    }
-    .comment-box input {
-      flex: 1;
-      padding: 0.5rem;
-      background-color: #111;
-      border: 1px solid #444;
-      color: #ccc;
-      border-radius: 4px;
-      font-size: 0.9rem;
-    }
-    .comment-box button {
-      padding: 0.5rem 0.8rem;
-      background-color: #222;
-      border: 1px solid #444;
-      color: #ccc;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .live-counter {
-      position: fixed;
-      font-size: 0.9rem;
-      color: #666;
-      background-color: #1a1a1a;
-      padding: 6px 10px;
-      border-radius: 6px;
-      border: 1px solid #333;
-      z-index: 999;
-      right: 10px;
-    }
-    #waste-counter { bottom: 50px; }
-    #like-counter { bottom: 80px; }
-    #scroll-counter { bottom: 110px; }
-    #comments-counter { bottom: 140px; }
-    #reposts-counter { bottom: 170px; }
-    #bookmarks-counter { bottom: 200px; }
-    #reel-counter { bottom: 230px; }
-    #story-counter { bottom: 260px; }
-    #profile-counter { bottom: 290px; }
-    #post-counter { bottom: 320px; }
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #1a1a1a;
-      border-top: 1px solid #333;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
-    }
-    .bottom-nav a {
-      color: #888;
-      text-decoration: none;
-      font-size: 1.3rem;
-    }
+  header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border-bottom: 1px solid #333;
+}
+.logo {
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #fff;
+}
+.nav-icons {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+}
+.nav-icons img {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  filter: invert(60%);
+}
+#notificationDropdown {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background-color: #1a1a1a;
+  border: 1px solid #333;
+  padding: 0.5rem;
+  border-radius: 6px;
+  width: 250px;
+  display: none;
+  z-index: 1000;
+  box-shadow: 0 0 10px #000;
+}
+#notificationDropdown p {
+  font-size: 0.9rem;
+  color: #ccc;
+  margin-bottom: 0.5rem;
+  border-bottom: 1px solid #333;
+  padding-bottom: 0.5rem;
+}
+.stories {
+  display: flex;
+  overflow-x: auto;
+  padding: 1rem;
+  border-bottom: 1px solid #333;
+}
+.story {
+  flex: 0 0 auto;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 2px solid #f44;
+  background-size: cover;
+  background-position: center;
+  background-color: #444;
+}
+main {
+  padding: 1rem;
+  padding-bottom: 6rem;
+}
+.post {
+  background-color: #1c1c1c;
+  border: 1px solid #333;
+  margin: 2rem auto;
+  width: 100%;
+  max-width: 550px;
+  color: #fff;
+  position: relative;
+}
+.post-header {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.post-header img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.post-header span {
+  font-weight: bold;
+  color: #ccc;
+}
+.post-image {
+  width: 100%;
+  height: 300px;
+  background-color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1rem;
+  color: #aaa;
+}
+.post-actions {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+.post-actions button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #ccc;
+  font-size: 1.1rem;
+}
+.comment-box {
+  padding: 0.5rem 1rem 1rem;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  display: none;
+}
+.comment-box input {
+  flex: 1;
+  padding: 0.5rem;
+  background-color: #111;
+  border: 1px solid #444;
+  color: #ccc;
+  border-radius: 4px;
+  font-size: 0.9rem;
+}
+.comment-box button {
+  padding: 0.5rem 0.8rem;
+  background-color: #222;
+  border: 1px solid #444;
+  color: #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1a1a1a;
+  border-top: 1px solid #333;
+  display: flex;
+  justify-content: space-around;
+  padding: 0.5rem 0;
+  z-index: 100;
+}
+.bottom-nav a {
+  color: #888;
+  text-decoration: none;
+  font-size: 1.3rem;
+}
+.like-popup {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  background-color: #222;
+  border: 1px solid #444;
+  color: #ccc;
+  padding: 5px 10px;
+  font-size: 0.8rem;
+  border-radius: 4px;
+  animation: fadeout 3s forwards;
+}
+@keyframes fadeout {
+  0% { opacity: 1; }
+  80% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
   </style>
 </head>
 <body>
@@ -262,9 +264,9 @@
       <div>Posts Posted: <span id="stat-posts">0</span></div>
     </div>
 
-    <!-- Main Mobile App Frame -->
+    <!-- Main App Frame -->
     <div id="app-frame">
-    <header>
+<header>
   <div class="logo">InstaVoid</div>
   <div class="nav-icons">
     <img id="notifIcon" src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="notifications" />
@@ -274,17 +276,6 @@
 
 <div class="stories" id="storiesBar"></div>
 <main id="feed"></main>
-
-<div id="waste-counter" class="live-counter"></div>
-<div id="like-counter" class="live-counter"></div>
-<div id="scroll-counter" class="live-counter"></div>
-<div id="comments-counter" class="live-counter"></div>
-<div id="reposts-counter" class="live-counter"></div>
-<div id="bookmarks-counter" class="live-counter"></div>
-<div id="reel-counter" class="live-counter"></div>
-<div id="story-counter" class="live-counter"></div>
-<div id="profile-counter" class="live-counter"></div>
-<div id="post-counter" class="live-counter"></div>
 
 <div class="bottom-nav">
   <a href="index.html">🏠</a>
@@ -320,18 +311,6 @@ let postsPosted = parseInt(localStorage.getItem("postsPosted"));
 let notifications = [];
 
 function updateStats() {
-  document.getElementById("waste-counter").textContent = `Minutes wasted: ${Math.floor(secondsWasted / 60)}`;
-  document.getElementById("like-counter").textContent = `Likes given: ${likesGiven}`;
-  document.getElementById("scroll-counter").textContent = `Scrolls done: ${scrollCount}`;
-  document.getElementById("comments-counter").textContent = `Comments given: ${commentsGiven}`;
-  document.getElementById("reposts-counter").textContent = `Reposts done: ${repostsDone}`;
-  document.getElementById("bookmarks-counter").textContent = `Posts bookmarked: ${postsBookmarked}`;
-  document.getElementById("reel-counter").textContent = `Reels viewed: ${reelsViewed}`;
-  document.getElementById("story-counter").textContent = `Stories viewed: ${storiesViewed}`;
-  document.getElementById("profile-counter").textContent = `Profiles visited: ${profilesVisited}`;
-  document.getElementById("post-counter").textContent = `Posts posted: ${postsPosted}`;
-
-  // Update side stat counters
   document.getElementById("stat-minutes").textContent = Math.floor(secondsWasted / 60);
   document.getElementById("stat-likes").textContent = likesGiven;
   document.getElementById("stat-scrolls").textContent = scrollCount;
@@ -474,8 +453,7 @@ window.addEventListener("scroll", () => {
 
 updateStats();
 </script>
-
-    </div>
-  </div>
+    </div> <!-- end of #app-frame -->
+  </div> <!-- end of .layout-wrapper -->
 </body>
 </html>
