--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     }
     .layout-wrapper {
       display: flex;
+      align-items: center;
       width: 100%;
       max-width: 1600px;
       height: 100vh;
