--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     .layout-wrapper {
       display: flex;
       align-items: center;
+      justify-content: center;
       width: 100%;
       max-width: 1600px;
       height: 100vh;
